@@ -6,6 +6,8 @@ Overview of changes in lightdm 1.2.0
     * Add extra checks in liblightdm so that it doesn't send invalid messages
       to the daemon
     * Fix gdmflexiserver not being added to the path (broken since 1.1.4)
+    * Fix PAM conversations after authentication from locking up sessions
+    * Fix PAM informational messages locking up autologin
 
 Overview of changes in lightdm 1.1.9
 
